--- a/src/posts/essay/人間この劇的なるもの.md
+++ b/src/posts/essay/人間この劇的なるもの.md
@@ -1,6 +1,9 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags: essay 
+title : 人間この劇的なるもの
+order : 1
 ---
 
 <span class="marginnote img-holder pb-10" >![人間・この劇的なるもの (新潮文庫) | 恆存, 福田 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/81JE3cmqrtL.jpg){width=45% .shadow-lg }</span>
@@ -61,7 +64,7 @@ date : git Last Modified
 
 もし，全体を構成するために必要な物質的要素に本質的な制限がないのなら，全体が物質的には自分という人間１人だけで構成されることも可能である．このとき，必然性は外側からみれば自由と見分けがつかない．
 
-このように全体を私の精神世界として考えるなら「全体のみが必然性を有し，全体は個人に優越し，劇におけるカタルシスは個人の自由を罰し，全体の存在をたしかめることである」という福田の主張はすんなり受け入れられるのではないだろうか．もちろん劇における全体は，それが劇である以上，一人の精神世界である必要は全くない．
+このように全体を私の精神世界として考えるなら「全体のみが必然性を有し，全体は個人に優越し，劇におけるカタルシスは個人の自由を罰し，全体の存在をたしかめることである」という福田の主張はすんなり受け入れられるのではないだろうか．もちろん劇における全体は，それが劇である以上，一人の精神世界である必要は全くないが．
 
 ## 関連
 
