--- a/src/posts/essay/私の幸福論.md
+++ b/src/posts/essay/私の幸福論.md
@@ -2,6 +2,8 @@
 layout: layouts/post.njk
 date : git Last Modified 
 title : 私の幸福論
+tags: essay 
+order : 2
 ---
 
 <span class="marginnote img-holder pb-10" >![私の幸福論 (ちくま文庫) | 福田恆存 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/514KJPNX3XL.jpg){width=45% .shadow-lg } <span class="w-2/4 pt-3">残念ながら「あなたは**幸福**にならねばならない」とは作中のどこにも述べられていない．</span></span>
@@ -20,9 +22,9 @@ title : 私の幸福論
 
 ## 感想
 
-福田恆存が女性誌に連載した小論の集まりで，一つ一つの文章に直接的なつながりはなく独立して読める．まとめたのは美醜がテーマでありながら，もっと一般的に幸福を妨げうる部分と，どう折り合いをつけるのかという文章．
+福田恆存が女性誌に連載した小論の集まりで，一つ一つの文章に直接的なつながりはなく独立して読める．まとめたのは『美醜について』という美醜がテーマでありながら，もっと一般的に幸福を妨げうる部分と，どう折り合いをつけるのかという文章．
 
-文中には次のような筆者の次男が骨の病気で生涯びっこ <span class="sidenote-number"></span><span class="sidenote">片方の足に故障があって，歩くときに釣り合いがとれないこと</span> になるかもしれない，という状況のときのことも書かれている．
+本文中には次のような筆者の次男が骨の病気で生涯びっこ <span class="sidenote-number"></span><span class="sidenote">片方の足に故障があって，歩くときに釣り合いがとれないこと</span> になるかもしれない，という状況のときのことも書かれている．
 
 *不具はたいしたことではない，困るのは，そのためにおこる心のひがみだということでした．いつか私は子供と二人きりのとき，いってやりました．友達が「びっこ」といおうと「かたわ」とからかおうと，平気でいるんだよ．じっさいそうなんだからな．みんな意地わるでいうんじゃない．おもしろいからいうのさ．おまえだって，そういう友だちがいたらからかうだろう．それだけのことだ．みんなおなじ人間じゃ，つまらない．なかにびっこがいてもいいさ．・・・私も，長男も，べつにわざと「びっこ」と口にだしはしませんでしたが，いっしょにすもうをとったりなにかするとき，おのずと，「びっこに負けるものか」などというざれことばが口をついて出るのを，しいて避けようとはしませんでした．*
 
