--- a/src/posts/notes/自己実現的制度としての違法薬物.md
+++ b/src/posts/notes/自己実現的制度としての違法薬物.md
@@ -1,9 +1,13 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags : notes
+title : 自己実現的制度としての違法薬物
 ---
 
 自己実現的な制度として違法薬物を解釈してみよう．自己実現的な制度とは何かについての議論は[制度分析](/posts/比較歴史制度分析/)の項を参照．
+
+## 違法薬物とは何か
 
 まず違法薬物とはなんだろうか．それはヘロイン，コカイン，覚醒剤，大麻，LSD，MDMAなど，法律で所持・使用を禁止されている薬物である．
 
@@ -62,10 +66,6 @@ date : git Last Modified
 このサイクルを破壊するような変化があれば，合法化はありえるだろう．一つの可能性は，使用することがクールだとみなされること．大麻を例に説明すると，大麻否定の根本にあるのは大麻が危険だという判断よりも，大麻をやっているひとはおかしい・やばい・クールでない，という印象ではないか．それはフェミニズムに対する否定的感情は，フェミニズムが思想的に誤っているという判断よりも，フェミニストと自称・他称される人々がおかしい・クールでないという印象に起因することと同じである．
 
 この印象の変化は，例えば海外で合法化が進んで，大麻業界のイメージアップ戦略が日本にも到達した場合に起こりうる．こうしたイメージ変化に伴って，大麻への否定感情が薄まれば，合法化する可能性はあるかもしれない．
-
-## 関連
-
-- [制度]()
 
 
 <div class="hidden">
