--- a/src/posts/notes/道具主義でみる科学.md
+++ b/src/posts/notes/道具主義でみる科学.md
@@ -1,11 +1,14 @@
 ---
 layout: layouts/post.njk
+date : git Last Modified 
+tags : notes
+title : 道具主義でみる科学
 ---
 
 ## 問題意識
 
 中国の伝統医学，漢方を学ぶと，五臓六腑という言葉が出てくる．
-例えば肝・心・脾・肺・腎から成る五臓のうち，wikipediaを参考に肝とは何かをみると，
+例えば肝・心・脾・肺・腎から成る五臓のうち，[wikipediaの記述](https://ja.wikipedia.org/wiki/%E4%BA%94%E8%87%93%E5%85%AD%E8%85%91)を参考に「肝とは何か」を見ると，
 
 - 判断力や計画性などの精神活動を支配
 - 筋肉を司る．筋肉がだめになるとひきつれを起こす
@@ -13,38 +16,41 @@ layout: layouts/post.njk
 
 とある．
 
-これは，現代(西洋)医学で呼ばれている肝臓(liver)の働きではない．これをもって中国の伝統医学の内臓に関する概念は誤りだと言えるだろうか．
-<marginnote>これ以降，西洋医学のliverを肝臓とかliver，中国の伝統医学の五臓の1つを肝と呼ぶ．</marginnote>
+\> <i>これを見ただけで漢方の非科学性がよく分かるね</i>
 
-まず，肝はliverが指すような具体的な解剖学的な臓器を表す概念ではない．古代中国はそういう実際の臓器と対応させる目的で五臓六腑という概念をつくったわけではない．だから，肝と言われて，👇を思い浮かべるのは，実は見当違いである．
+と思うかも知れないが，本当にそうだろうか？確かにこれは，現代医学で呼ばれている肝臓(liver)の働きではない．しかし，このことから中国の伝統医学の内臓に関する概念は誤りだと言えるだろうか．これ以降，西洋医学のliverは「肝臓」「liver」で，中国の伝統医学の五臓の1つは「肝」という名前で呼ぶことにしよう．
+
+まず，肝はliverが指す，具体的な解剖学的な臓器を表す概念ではない．古代中国はそういう実際の臓器と対応させる目的で五臓六腑という概念をつくったわけではない．だから，肝と言われて，👇を思い浮かべるのは，実は見当違いなのだ．
 
 ![肝臓 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Leber_Schaf.jpg/200px-Leber_Schaf.jpg)
 
-それゆえ，上記の肝の働きはliverの働きではない，というのが事実でも，それをもって肝を否定することはできない．肝は肝臓ではないから．表す概念はそもそも異なるのに，肝，肝臓という同じ語が当てられているのは，liverの訳語として肝を流用したからだ．
+それゆえ「中国の伝統医学で肝の働きとされているものは，liverの働きではない」ということが事実でも，それをもって肝という概念が非科学だと言うことはできない．肝は肝臓ではないのだから．表す概念が異なるのに，肝，肝臓という同じ語が当てられているのは，liverの訳語として肝を流用したからだ．
 
-では，なぜ解剖学的臓器に対応しない内蔵などというものを考えるのか？肝・心・脾・肺・腎というときに，人体の中には，それと対応するものが全く無いとしたら，五臓六腑の概念を作る正当性，意義は何か？
+では，なぜ解剖学的臓器に対応しない肝などというものを考えるのか？それどころか，肝だけでなく，五臓六腑全般が解剖学的・実体臓器を指さない．肝・心・脾・肺・腎というときに，人体の中には，それと対応するものが全く無いとしたら，五臓六腑の概念を作る正当性，意義は何か？
 
 ## 五臓六腑の目的は何か
 
-それは，中医学・漢方医学における治療の流れを考えれば分かる．どんな医学でも最終的な目標は患者の状態を良くすることにあるが，それをどう達成するのかが，西洋医学と東洋医学で異なっている．西洋医学の殆どの領域では，根本に疾患(身体の解剖学的・生理的学的に明らかな異常がある)と考え，それを診断し，その診断目によって，何が有効な薬なのかがわかる．一方，東洋医学では，薬の選択に使うのは，疾患名ではなく，証と呼ばれるものである．証とは何かについては[このページ](http://www.koukandou.co.jp/shittoku/2009/01/post-1.html)を参照．
+それは，中医学・漢方医学における治療の流れを考えれば分かる．どんな医学でも最終的な目標は患者の状態を良くすることにあるが，それをどう達成するのかが，西洋医学と東洋医学で異なっている．西洋医学の殆どの領域では，根本に疾患<sidenote-number></sidenote-number><sidenote>身体の解剖学的・生理的学的に明らかな異常と結びつく概念．詳しくは[精神障害](/posts/精神障害)の項を参照．</sidenote>と考え，それを診断し，その診断名によって，何が有効な薬なのかが分かり，治療方針が決まる．一方，東洋医学では，薬の選択に使うのは，疾患名ではなく，証と呼ばれるものである．証とは何かについては[このページ](http://www.koukandou.co.jp/shittoku/2009/01/post-1.html)を参照．
 
-五臓六腑という概念は，「気・血・水」や「陰・陽」といった概念とともに，この証を決定するためにある．例えば，症状としては意識の散漫，動機や不安，不眠があり，舌を診ると淡くなっていることから，心血虚の証が当てはまると考え，何々という漢方を使うなど．もっと詳しい実践は[このページ](http://www.hal.msn.to/kankaisetu/kanpokai1577.html)を参照．こうして，五臓六腑の概念の正当性は，実在物との対応というよりは「五臓六腑の概念を使って明らかになった証で選択された漢方が，患者の状態を良くするか否か」にかかっていることが分かる．いろいろな症状や身体所見を五臓六腑の概念で証として整理して，効果的な漢方が選択できるなら，たとえ実在物との対応がなかったとしても，問題ではないだろう．
+五臓六腑という概念は，「気・血・水」や「陰・陽」といった概念とともに，この証を決定するためにある．例えば，症状としては意識の散漫，動機や不安，不眠があり，舌を診ると淡くなっていることから，心血虚の証が当てはまると考え，何々という漢方を使うなど．もっと詳しい実践は[このページ](http://www.hal.msn.to/kankaisetu/kanpokai1577.html)を参照．
+
+こうして，五臓六腑の概念の正当性は，実在物との対応というよりは「五臓六腑の概念を使って明らかになった証で選択された漢方が，患者の状態を良くするか否か」にかかっていることが分かる．いろいろな症状や身体所見を五臓六腑の概念で証として整理して，効果的な漢方が選択でき，その結果患者の生命が良くなるのなら，たとえ実在物との対応がなかったとしても，問題ではない．
 
 ## 道具主義
 
-ここから一般的に，科学理論とは，観察可能な現象を組織化・予測するための形式的な道具・装置であると見なす立場を主張することができる．これは道具主義と呼ばれる．この観点からは，科学の目的は予測と制御であり，何らかの真理の追求ではない．
+ここから一般的に，科学理論とは，観察可能な現象を組織化・予測するための形式的な道具・装置であると見なす立場を主張することができる．これは道具主義と呼ばれる．この観点からは，科学の目的は予測と制御であり，何らかの真理の追求，つまり実在物の真実の姿を追い求めることではない．
 
-例えば物理学者であるマックス・ボルンが『アインシュタインの相対性理論』で挙げた例を出してみよう．
+真理の追求が困難であることを，物理学者であるマックス・ボルンが『アインシュタインの相対性理論』で挙げた例で説明しよう．
 
 *要するに，絶対にまっすぐ というような幾何学的性質は直接証明できず，つねに，測定に用いられている補助手段の幾何学的性質(光線の直線性，装置が変形しないことなど)に相対的に示されるのである*
 
-つまり，あるものがまっすぐかどうかを調べたければ，例えば光線をあてて，光線がそのふちにずっと沿っていることを確かめる方法があるが，この方法は光が直線することを仮定として使っていて，この光の直線性自体もまた示そうと思えば，ほかの性質を仮定することになり，と無限後退に陥るため「それが真っ直ぐである」が真であることを証明することはできない，もっと一般に真理の追求はできないとなる．
+つまり，あるものがまっすぐかどうかを調べたければ，例えば光線をあてて，光線がそのふちにずっと沿っていることを確かめる方法があるが，この方法は光が直進することを仮定として使っていて，この光の直進性自体もまた示そうと思えば，ほかの性質を仮定することになり，と無限後退に陥るため「あるものが真っ直ぐである」が真であることを証明することはできない，同様に考えて，一般的に真理の追求はできないとなる．
 
-私たちが知りうるのは，そのような実在物についての真理ではなく，計測の結果の目盛りが一致したりしなかったりすることで，私たちの目的は，それらの関係を体系付けることで，目盛りの一致を予測したり，条件を変えることで制御することである．再び引用
+私たちが知りうるのは，そのような実在物についての真理ではなく，計測の結果の目盛りが一致したりしなかったりすることで，私たちの目的は，それらの関係を体系付けることで，目盛りの一致を予測したり，条件を変えることで制御することである．これについて，アインシュタインの「相対論の意味』から引用しよう．
 
 *あらゆる測定は、指針あるいは標識がある時刻に目盛のある個所と一致することを述べる．測定が長さ、時間、力、質量、電流、化学的親和力、その他なにに関するものであっても、実際に観測されるのは時空における一致である．・・・物理学はこのような記録された世界点のあいだの関係を論ずる学問である*
 
-*あらゆる科学の目的は、よしそれが自然科学であれ、はたまた心理学であれ、我々の経験を系統立てて、それらを一つの論理的な体系のなかにもちきたすことにある* アインシュタイン(著) 矢野健太郎 (訳) 「相対論の意味 波書店、一九五八
+*あらゆる科学の目的は、よしそれが自然科学であれ、はたまた心理学であれ、我々の経験を系統立てて、それらを一つの論理的な体系のなかにもちきたすことにある* 
 
 道具主義のもとでは，現象の説明・予測がある科学理論によって，どれだけうまくいっていても、それによって「理論が観察可能な現象の背後にある観察不可能な隠れた実在についての真なる記述になっている」とは考えない．理論に含まれる様々な概念(例えば時間や電子)は，外部世界の実在物(="先験的必然")ではなく，我々が操作・制御しうるものなのだ．
 
@@ -52,24 +58,36 @@ layout: layouts/post.njk
 
 ## 構成概念
 
-概念の操作の例をあげよう．例えば知能という概念がある．知能が人の脳や身体に内在する何らかの実在的な性質であると考えれば，知能を上げたいと考えたいときに，まず「知能とは何か」と考えなければならない．考え方を逆転させてIQテストの結果が知能なのだと定義すれば，知能は計測可能で，制御可能な概念となる．<marginnote>逆にいうと，なんらかの調査で〇〇する人の方が頭が良くなることが分かったと言われても，知能概念はどのように構成されているのかを考える必要がある</marginnote>このように，観察・測定ができるように人為的に構成された概念のことを構成概念という．構成概念の正当性は，その概念を用いた予測や制御の精度や有用性によらなければならない．例えば，国の発展のためには国民の知能を上げることが大切だと考えた人がいて，その人が知能をIQテストの結果と定義して，なんらかの操作でこの意味での知能を上げても(つまりIQテストの点数を上げても)，その国が発展しないのならば，IQによって構成された知能については，「知能が上がるならば国が発展する」が成立しないことが分かったので，この知能概念は有用でないということになる．あくまで何をしたいがための概念なのかが分からなければ，有用性はわからない．また，構成概念は，ある目的の範囲内で有用なのであって，これを超えていろいろなところに使ったり，目的を忘れて，外部世界の実在物かのように考えることはよく見られることである．
+概念の操作の例をあげよう．例えば知能という概念がある．知能が人の脳や身体に内在する何らかの実在的な性質であると考えれば，知能を上げたいと考えたいときに，まず「知能とは何か」を考えなければならない．知能とは何かが分からなければ，知能が上がったのかどうかを判定することなどできない．しかし「知能とは何か」に答えることは容易ではない．
 
-その代表例はフロイトの無意識だろう．以下はどんなときに無意識という概念をつかうのか，無意識の構成的な定義である．
+そこで，考え方を逆転させて，IQテストの結果こそが知能なのだと定義しよう．そうすれば，知能は計測可能で，制御可能な概念となる．このように，観察・測定ができるように人為的に構成された概念のことを<stbl>構成概念</stbl>という．<marginnote>逆にいうと，言われても，知能概念はどのように構成されているのかを考える必要がある</marginnote>
+
+構成概念の正当性は，その概念を用いた予測や制御の精度や有用性によらなければならない．例えば，国の発展のためには国民の知能を上げることが大切だと考えた人がいて，その人が知能をIQテストの結果と定義して，なんらかの操作でこの意味での知能を上げても，つまりIQテストの点数を上げても，その国が発展しないのならば，IQによって構成された知能については，「知能が上がるならば国が発展する」が成立しないことが分かったので，この知能概念は有用でないということになる．あくまで何をしたいがための概念なのかが分からなければ，有用性はわからない．また，構成概念は，ある目的の範囲内で有用なのであって，これを超えていろいろなところに使ったり，目的を忘れて，外部世界の実在物かのように考えることは良くない．
+
+しかし，これは実際にはよく起きることだ．その代表例はフロイトの無意識だろう．以下はどんなときに無意識という概念をつかうのか，無意識の構成的な定義である．
 
 *ある行動が現に行われているが，それを行うつもりはなかったと本人がいう．あるいはなぜそれを自分がしたのかわからないという．あるいは，ある心因性の症状があって，その症状の原因や意味がわからない．そのようなとき，ひとは無意識が働いていると考える．*
-https://core.ac.uk/download/pdf/59302324.pdf
 
-何のために？それは心因性の症状の改善のためである．無意識という概念をつかって，クライエントの症状・病態を把握し，治療方針が決まって，その結果症状の改善が得られるのであれば，その限りにおいて無意識概念は有用で意義のあるものになる．だから無意識の働きは脳のどこにあるのか？とか，そういうことはフロイトの設定した無意識に限ればナンセンスとなる．もちろん，現在の無意識の定義はもともとの定義とは異なった構成的な定義をとっているだろう．
+何のために，このように無意識を定義するのか？それは心因性の症状の改善のためである．無意識という概念をつかって，クライエントの症状・病態を把握し，治療方針が決まって，その結果症状の改善が得られるのであれば，その限りにおいて無意識概念は有用で意義のあるものになる．だから，無意識の働きは脳のどこにあるのか？という問いは，フロイトの設定した無意識に限ればナンセンスなものである．もちろん，現在の無意識の定義は，フロイトの元々の定義とは異なった構成的な定義をとっているのだろう．<sidenote-number></sidenote-number><sidenote>このことから，ある主張，例えば「ナントカ大学のナントカ教授の実験で〇〇する人の方が頭が良くなることが分かった」という紹介記事を見ても，「頭が良い」という概念が，どのようにその研究では構成しているのかを確認しなければ，この主張が何を意味しているのかを理解することはできない．それはIQテストの点数が高いことかもしれないし，進学率が上がることかもしれないし，頭のある領域のMRIでの信号が高くなることかもしれないが，これらのどれを意味するかで，主張内容はかなり変わってくる．</sidenote>
 
-これは物理学についても言える．例えば静止した物体Aが位置エネルギーDを持っているというとき，これが意味しているのは，例えば位置エネルギーが0である高さまで物体が降りたときに対応した速度が測定されるということであり，これをもって位置エネルギーを持っているというのだ．だから，物体がもっている位置エネルギーは，物体のどこにあるのか？と問うのはナンセンスである．(この「もっている」は「私は2000円札をもっている」というときの「もっている」ではない)そして，このように構成される物理学のモデルの正当性は，もちろん予測と制御の精度で決まる．
+物理学についても同様のことが言える．例えば静止した物体Aが位置エネルギーDを持っているというとき，これが意味しているのは，例えば位置エネルギーが0である高さまで物体が降りたときに，エネルギー保存則から求められる，ある速度が測定されるということであり，この測定がされることから，位置エネルギーDを持っているというのだ．だから，物体がもっている位置エネルギーは，物体のどこにあるのか？と問うのはナンセンスである．この「もっている」は「私は2000円札をもっている」というときの「もっている」ではないのだ．そして，このように構成される物理学のモデルの正当性は，もちろん予測と制御の精度で決まる．
 
-フォン・ノイマンの引用でしめよう．(この引用は量子論を想定して読むとよく実感できる．)
+[フォン・ノイマンの引用(原文へのリンク)](https://www.goodreads.com/quotes/337300-the-sciences-do-not-try-to-explain-they-hardly-even)でしめよう．(この引用は量子論を想定して読むとよく実感できる．)
 
-*The sciences do not try to explain, they hardly even try to interpret, they mainly make models. By a model is meant a mathematical construct which, with the addition of certain verbal interpretations, describes observed phenomena. The justification of such a mathematical construct is solely and precisely that it is expected to work - that is correctly to describe phenomena from a reasonably wide area. Furthermore, it must satisfy certain esthetic criteria - that is, in relation to how much it describes, it must be rather simple.*
-<marginnote>こうして見ると，五臓六腑が現実の解剖学的臓器に対応しないというのは，それ自体としては欠点ではない．漢方の欠点は実在物に対応しないことではなく，西洋医学と比べると多くの領域で制御が甘い(簡単に言うと効かない)ことにあるのだと思う．しかしその理由として，西洋医学が実在物に対応するものを考えていたから，という理由だけではない．実際，セロトニンが脳に作用して，なんちゃらかんちゃら，という説明は，五臓六腑くらい実在(があるとして)への対応が怪しい．多くの薬が理論的には効くはずでも，RCTで効果が否定されることを考えれば，有用性には，統計的な手法も多く関与していると思われる．では漢方になぜ統計的な手法が使えないのかと言えば，これは西洋医学は薬を使う対象を疾患名という明確な基準できめて居るのに対して，証という基準は曖昧で，漢方を使う対象を専門家でも合意が得られないところにあるのだろう．</marginnote>
+*科学は(現象を)説明しようとはしないし，解釈しようともしない．科学はモデルを作るのだ．モデルとは，観察された現象を，言葉による解釈を加えて記述された数学的構成物(mathematical construct)である．このような数学的構成物の正当性は、それが機能すること，つまり，それなりに広い範囲の現象を正しく記述できることに尽きる．さらに，それは，ある種の美的基準を満たすものでなければならない．つまり，モデルが記述できる現象の豊富さに比べて，モデルはシンプルでなければならないのである．*
+
+## 漢方に話を戻す
+
+こうして見ると，五臓六腑が現実の解剖学的臓器に対応しないというのは，それ自体としては欠点ではない．漢方の欠点は対応する実在物がないことではなく，西洋医学と比べると多くの領域で制御が甘い，簡単に言うと効かないことにあるのだと思う．
+
+しかし効かない理由として，西洋医学が実在物に対応するものを考えていたから，という考えるだけでは不十分だ．実際，セロトニンが脳に作用して，なんちゃらかんちゃら，という説明は，五臓六腑くらい実在への対応が怪しい．多くの薬が理論的には効くはずでも，ランダム化比較試験を行ってみると効果が否定されることを考えれば，有用性には，統計的な手法も多く関与していると思われる．では漢方になぜ統計的な手法が使えないのかと言えば，これは西洋医学は薬を使う対象を疾患名という明確な基準で決めているのに対して，証という基準は曖昧で，漢方を使う対象を専門家でも合意が得られないところにあるのだろう．
 
 ## 関連
-- [哲学入門1-言語]
+- [哲学入門1-言語]()
 ─ ここで紹介する言語の誤った使い方の1つは，構成概念を実在物とみなす(例えば投票権がどこかに存在すると考える)ということである．
-- [操作主義](https://www.wikiwand.com/ja/%E6%93%8D%E4%BD%9C%E4%B8%BB%E7%BE%A9)
+- [操作主義wikiwand](https://www.wikiwand.com/ja/%E6%93%8D%E4%BD%9C%E4%B8%BB%E7%BE%A9)
 ─ 文中での引用したアインシュタインの相対性理論を契機にした，時間や空間の概念の操作的な捉え方について詳しく書かれている．
+
+## 参考資料
+
+- [無意識の意識化](https://core.ac.uk/download/pdf/59302324.pdf)
