--- a/src/posts/philosophy/哲学入門2-認識行為.md
+++ b/src/posts/philosophy/哲学入門2-認識行為.md
@@ -1,21 +1,16 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags : phil
+title : 哲学入門2 認識論・行為論
+order : 3
 ---
 
-ここでは現代哲学の主要なテーマである，言語論・行為論・認識論のうち，行為論と認識論を紹介し，その過程で，哲学の基本的な手法である概念分析とは何かを知識分析を通して理解し，最終的に哲学とはどういう営みなのかを考えたい．(言語については論理学を扱う項で部分的に扱う．言語論に興味がある人は『言語哲学大全1』がオススメ．1以外は読んでいません．)
+哲学入門1では，言語について扱った．現代哲学の主要なテーマは言語論・行為論・認識論と言われる．ここでは，行為論と認識論を紹介し，その過程で，哲学の基本的な手法である概念分析とは何かを知識分析を通して理解し，最終的に哲学とはどういう営みなのかを考えたい．{.pt-6}
 
-参考にした本は
+## 行為論
 
-概念工学宣言　心の哲学入門　それは私がしたことなのか　の3冊
-
-入門としてオススメなのは心の哲学入門．概念工学宣言は戸田山の項だけでも十分，心理学の方の記述はやや散らばっている．それは私がしたことなのか，は批判的な読みの格好の材料なので，別のところで書いた．
-
-# 行為論
-
-行為論の中心問題は，能動的な行為が単に受動的な自然現象とどのように 異なるかを示すことにある．[https://www.jstage.jst.go.jp/article/jpssj/53/2/53_133/_pdf]
-
-その始まりをつげたのは，20世紀の哲学者ウィトゲンシュタインが提示した次の問いである．
+行為論の中心問題は，能動的な行為が単に受動的な自然現象とどのように異なるかを示すことにある．その始まりを告げたのは，20世紀の哲学者ウィトゲンシュタインが提示した次の問いである．
 
 *私が手をあげるという事実から，私の手があがるという事実を差し引いたとき，後に残るのは何か？*
 
@@ -23,74 +18,131 @@ date : git Last Modified
 
 我々は行為に対しては責任を問うが，出来事に対しては責任を問わない．これが，行為論を考える1つの大きな意義である．
 
-例えば交通事故での加害者の責任は，その事故に加害者の意図がどれだけ関与しているか，その事故の発生がどれだけ加害者の行為と言えるのかに依存している．
+例えば交通事故での加害者Aの責任は，その事故にAの意図がどれだけ関与しているか，その事故の発生がどれだけAの行為と言えるのかに依存している．
 
-例えば彼が飲酒運転していたとき．このとき彼は誰かを轢こうという故意があったわけではないが，飲酒が事故を避けるために要する能力を損ねることを知りながら酒を飲んだわけなので，彼には轢いてしまうかもしれないけどまあいいやという未必の故意(犯罪事実に対する確定的な認識・認容はないものの、その蓋然性を認識・認容している状態)があったとみなされる．これは過失(ある結果を認識・予見することができたにもかかわらず　注意しなかったこと)よりも大きな責任を取ることになる．つまり責任の大きさとしては故意>未必の故意>過失>無過失となる．例えば，もらい事故，典型例としては信号待ちで停止中に追突されるケースにおいて，追突された側は無過失とされる．追突された人にとって，この事故はおきたのであって，おこしたのではないのだ．(意図)
+例えばAが飲酒運転していたとき．このときAは誰かを轢こうという故意があったわけではないが，飲酒が事故を避けるために要する能力を損ねることを知りながら酒を飲んだわけなので，Aには轢いてしまうかもしれないけどまあいいやという未必の故意<sidenote-number></sidenote-number><sidenote>犯罪事実に対する確定的な認識・認容はないものの、その蓋然性を認識・認容している状態</sidenote>があったとみなされる．
+
+これは過失<sidenote-number></sidenote-number><sidenote>ある結果を認識・予見することができたにもかかわらず，注意しなかったこと</sidenote>よりも大きな責任を取ることになる．つまり責任の大きさとしては
+
+故意>未必の故意>過失>無過失
+
+となる．例えば，もらい事故，典型例としては信号待ちで停止中に追突されるケースにおいて，追突された側は無過失とされる．追突された人にとって，この事故はおきたのであって，おこしたのではないのだ．
 
 しかし，このように行為・意思概念と責任概念を結びつけることは，正当・適応的なのだろうか．
 
-正当というのは，神経科学や心理学の知見が明らかにしたように我々はそれほど自分の行為をコントロールできるわけではないし，それほど熟慮注意の上で行為を行っているわけではないからだ．だから我々の行為は常に過失をはらんでいる．では我々のほとんどが過失責任をとったことはない．なぜかと言えば，過失があっても，事故が実際に起きる確率は非常に低いからだ．つまり，過失責任が生じる本質的な原因は，過失をしたことではなく，事故が実際に起ってしまったことである．どれだけ過失をしていても，運よく事故が起きなければ責任をとらなくていいし，ほんの少しの注意散漫でも運悪く子供が飛び出してくれば責任をとることになる．もちろん，過失が大きいほど，事故を起こす確率は高めるわけだが，運が大きく絡む問題を，過失・意図を理由として責任を負わせることは正当なのだろうか．(概念工学)
+というのも，神経科学や心理学の知見が明らかにしたように，
 
-適応的というのは，例えば自動運転が発展していけば誰の行為ともいえない原因で事故は起こりうるし，そもそも自己の行為の責任はすべて行為者にあるという自己責任の考えは我々の社会を幸福にしているのだろうか．(概念工学)
+- 我々はそれほど自分の行為をコントロールできるわけではないし，
+- それほど熟慮注意の上で行為を行っているわけではない
 
-(これについては無過失責任という概念がすでにでている．wiki https://ja.wikipedia.org/wiki/%E7%84%A1%E9%81%8E%E5%A4%B1%E8%B2%AC%E4%BB%BBにわかりやすくまとめられているのでぜひ参照してほしい．)
+からだ．だから我々の行為は常に過失をはらんでいる．
+
+でも我々のほとんどが過失責任をとったことはない．なぜかと言えば，過失があっても，事故が実際に起きる確率は非常に低いからだ．つまり，過失責任が生じる本質的な原因は，過失をしたことではなく，事故が実際に起ってしまったことである．どれだけ過失をしていても，運よく事故が起きなければ責任をとらなくていいし，ほんの少しの注意散漫でも運悪く子供が飛び出してくれば責任をとることになる．もちろん，過失が大きいほど，事故を起こす確率は高めるわけだが，運が大きく絡む問題を，過失・意図を理由として責任を負わせることは正当なのだろうか．
+
+また，例えば自動運転が発展していき，誰の行為ともいえない原因で事故は起こりうる状況で，そもそも自己の行為の責任はすべて行為者にあるという自己責任の考えは我々の社会を幸福にしているのだろうか．
+
+<marginnote><a href="https://ja.wikipedia.org/wiki/%E7%84%A1%E9%81%8E%E5%A4%B1%E8%B2%AC%E4%BB%BB" target="_blank" rel="noopener noreferrer">無過失責任</a>も参照</marginnote>
 
 そこで，行為や意図について考えるのが行為論である．
 
 
 
-# 認識論
+## 認識論
 
-認識論の目的は，二つある．一つは知識，信念，証拠，正当化，説明，理解などの「知ること」に関連する様々な概念に定義を与えること．つまり「知識とは何か」という形式に答えること．一つはそれを踏まえて，よりよい知識・信念体系を得るために組織だった方法を提案すること．「知性改善」(概念工学)
 
-認識論に限らず，Xとは何かという問いに対しては，概念分析が行われる．概念分析は，ある概念の必要十分条件を与えることを目標とする．その際には(基本の段階では)具体例と，それに対する我々の概念的直観を根拠として進める．
 
-例えば，知識の古典的定義は次の通り．つまり次の3つをすべて満たすことが「Sはpを知っている」と我々が言うとき意味していることである．これをJTB(Justified true belief = 正当化された真なる信念)形式と呼ぼう．
+認識論の目的は，二つある．
 
-Sはpを知っている ⇔　Sはpと信じている(B) & pは真である(T) & Sはpと信じるに足る証拠を有し，それを信じている(J) 
+- 知識，信念，証拠，正当化，説明，理解などの「知ること」に関連する様々な概念に定義を与えること．つまり「知識とは何か」という形式に答えること．
+- もう一つはそれを踏まえて，よりよい知識・信念体系を得るために組織だった方法を提案すること．
+{.list-outside .ml-3}
 
-例えば(B)(T)だけでは知っているとは言えないのは次の例を考えれば分かる．例えば競馬で万馬券を当てた人がいたときに，なぜその勝ち順になるのかわかったのですか，と聞いて「今日はとても太陽が眩しかったので，この勝ち順になると思いました」と答えれば，彼はこの勝ち順になることを信じていたし(B)，それも正しかったが(T)，我々は彼が勝ち順を予測できていたとは思わない．なぜなら太陽がとても眩しかったというのは正当な証拠とは見なせないから．過去のデータからとか，今日のパドックを歩く様子を見て，とかもっとそういうまともな理由が必要だと思う．だからこの場合，彼はたまたま当たったのであり，当てたのではないと我々は考えるだろう．そこでこの概念的直観を根拠にして，(J)の条件が必要となる．
+認識論に限らず，Xとは何かという問いに対しては，<stbl>概念分析</stbl>が行われる．
 
-このJTB形式に，さらに具体例をあげて，この定義が不十分であることを主張できる．その代表例がゲディア問題である．
+### 概念分析とは何か？
 
-【ゲティア問題】スミスが知るかぎりジョーンズが所有する車はずっとフォードである．この間ドライブに誘われたときも彼はフォードに乗っていた．ここからスミスは「ジョーンズはフォードに乗っている」という信念を形成し，さらにここから「ジョーンズはフォードに乗っている，または，ブラウンはバルセロナにいる」という命題を演繹し信じた．(これは「または」の導入で論理的に正しい)この演繹以外にスミスはブラウンがバルセロナにいるという根拠を何一つ持っていなかった．ブラウンは普段ニューヨークにいたし，旅行を頻繁にする方でもなかったのだ．
+概念分析は
 
-ところが，ジョーンズが実際に乗っている車はトヨタであり(スミスが見ていたのはレンタカーだったのだ)，ブラウンはほんとうにバルセロナにいた．
+- ある概念の必要十分条件を与えること
+- 日常使っている概念が本当のところ何なのかを明晰にすること
 
-このとき，JTB形式に従うと「ブラウンはバルセロナにいる」ということをスミスは知っていたことになる．正当化は根拠のある信念「ジョーンズはフォードに乗っている」からの演繹であることによるし，実際に真であるし，スミスは信じていた．しかし我々の直観は，「スミスは知っていたか？」にノーというだろう．ゲティア問題において，「または」の導入が正当な証拠を作るものとは見なせないことが問題である．しかし，正当化された知識から演繹によって新しく知識を得ることは認められる必要があるように思われる．
+を目標とする．例えば，父とは「男であり子をもつもの」と定義したとする．しかし，これには，
+
+- では「バッハは音楽の父だ」という文の父は何を意味しているのか？
+- 子連れの女と結婚した男は，いつから父になると言えるのか？
+- そもそも，男とは何か？子をもつとはどういう状態か？
+
+という反論・問いが考えられる．しかし，いずれの場合でも，概念分析の基本となるのは，具体例や，それに対する我々の概念的直観であり，少なくとも最初の段階では，これを根拠に話を進めることになる．
+
+しかし，概念分析を進めていくと，必ずしも日常的直観とそぐわない概念であっても，ある目的のために有用であったり，むしろ我々の持つ概念のほうが修正が必要なのだと考えられたりする場合が出てくる．先程みた責任の概念もその1例だろう．
+
+このように概念分析は，私たちの有する概念の明晰化から，望ましい・有用な概念の形成へと移っていくことが多い．その1例として知識の概念分析を見てみよう．
+
+### 知識の概念分析
+
+知識の古典的定義は次の通りで，これら3つをすべて満たすことが「Sはpを知っている」と我々が言うとき意味していることである．これをJTB(Justified true belief = 正当化された真なる信念)形式と呼ぼう．
+
+Sはpを知っている ⇔　
+- Sはpと信じるに足る証拠を有し，その証拠を信じている(J) 
+- pは真である(T) 
+- Sはpと信じている(B) 
+
+例えば(T)(B)だけで，正当化がなければ知っているとは言えないのは次の例を考えれば分かる．
+
+競馬で万馬券を当てた人がいたときに，なぜその勝ち順になるのかわかったのですか，と聞くと，「今日はとても太陽が眩しかったので，この勝ち順になると思いました」と答えた．彼はこの勝ち順になることを信じていたし(Belief)，正しかったが(True)，我々は彼が勝ち順を予測できていたとは思わない．なぜなら太陽がとても眩しかったというのは正当な証拠とは見なせないからだ．過去のデータからとか，今日のパドックを歩く様子を見て，とかもっとそういうまともな理由が必要だと思うだろう．だからこの場合，彼はたまたま<stbl>当たったのであり，当てたのではない</stbl>と我々は考えるだろう．そこでこの概念的直観を根拠にして，(Justified)の条件が必要となる．
+
+このJTB形式は，多くの具体例に適応できる良い定義だが，ゲディア問題という反例を挙げることができる．
+
+【ゲティア問題】
+スミスが知るかぎりジョーンズが所有する車はずっとフォードである．この間ドライブに誘われたときも彼はフォードに乗っていた．ここからスミスは「ジョーンズはフォードに乗っている」という信念を形成し，さらにここから「ジョーンズはフォードに乗っている，または，ブラウンはバルセロナにいる」という命題を演繹し信じた<sidenote-number></sidenote-number><sidenote>これは「または」の導入で論理的に正しい</sidenote>．この演繹以外にスミスはブラウンがバルセロナにいるという根拠を何一つ持っていなかった．ブラウンは普段ニューヨークにいたし，旅行を頻繁にする方でもなかったのだ．{.pt-8}
+
+ところが，ジョーンズが実際に乗っている車はトヨタであり(スミスが見ていたのはレンタカーだったのだ)，ブラウンはほんとうにバルセロナにいた．{.pb-8}
+
+このとき，JTB形式に従うと「ブラウンはバルセロナにいる」ということをスミスは知っていたことになる．正当化は根拠のある信念「ジョーンズはフォードに乗っている」からの演繹だし，実際に真であるし，スミスは信じていた．しかし我々の直観は，「スミスは知っていたか？」にノーというだろう．問題は「または」の導入が正当な証拠を作るものとは見なせないことである．しかし，正当化された知識から演繹によって新しく知識を得ることは認められる必要がある．
 
 こうしてJTB形式ではない知識の定義が必要となる．詳細な議論は省略するが，その一つは(J)の条件を次のように変えることである．
 
 【信頼性条件】Sの信念pは信頼の置けるプロセスで形成された
 
-ここで問題にしたいのは，この信頼性条件が正しいかどうかではなく，この条件はもともとJがもっていた「根拠のある証拠をを信じている」という主体が根拠を意識することをもはや求めていない，という点で我々の概念的直観から離れているということである．
+ここで問題にしたいのは，この信頼性条件が正しいかどうかではなく，この条件はもともとJがもっていた「根拠のある証拠を信じている」という主体が根拠を意識することをもはや求めていない，という点で我々の概念的直観から離れているということである．
 
-これについてもキース・レーラーがTheory of Knowledge (1990)で示したMr. Truetempの例で見てみよう．
+これについてもキース・レーラーがTheory of Knowledge (1990)で示した．<a href="https://faculty.fordham.edu/nballantyne/truetemp.html" target="_blank" rel="noopener noreferrer">Mr. Truetemp(温度計男)の例</a>で見てみよう
 
-Suppose a person, whom we shall name Mr. Truetemp, undergoes brain surgery by an experimental surgeon who invents a small device which is both a very accurate thermometer and a computational device capable of generating thoughts. The device, call it a tempucomp, is implanted in Truetemp’s head so that the very tip of the device, no larger than the head of a pin, sits unnoticed on his scalp and acts as a sensor to transmit information about the temperature to the computational system of his brain. This device, in turn, sends a message to his brain causing him to think of the temperature recorded by the external sensor. Assume that the tempucomp is very reliable, and so his thoughts are correct temperature thoughts. All told, this is a reliable belief-forming process. Now imagine, finally, that he has no idea that the tempucomp has been inserted in his brain, is only slightly puzzled about why he thinks so obsessively about the temperature, but never checks a thermometer to determine whether these thoughts about the temperature are correct. He accepts them unreflectively, another effect of the tempucomp. Thus, he thinks and accepts that the temperature is 104 degrees. It is. Does he know that it is?
+*ある外科医が，非常に正確な体温計であり，かつ思考を生み出すことのできる計算装置でもある小型の装置TempuCompを発明した．この外科医はTrueTemp氏に<stbl>内緒で</stbl>脳手術を施し，TempuCompを頭に埋め込んだ．この装置は脳にメッセージを送り，外部センサーが記録した温度について考えるように仕向ける．TempuCompは非常に信頼性が高いので，彼の思考は正しい温度の思考であると仮定しよう．つまり，これは信頼性の高い信念形成プロセスなのだ．さらに，TrueTemp氏はTempuCompが脳に挿入されたことを知らず，なぜ温度についてこんなに執拗に考えるのかについて少し困惑しているだけで，温度に関するこれらの考えが正しいかどうかを判断するために温度計をチェックすることはなく，その考えを無批判で受け入れると仮定しよう．例えば彼は気温が27度であると考え，それを受け入れている(B)．この信念はTempuCompという精密な機械で信頼性の高いプロセスで形成され(信頼性条件)，そして実際に気温は27度だった(T)．*
 
-ある実験的な外科医が、非常に正確な体温計であり、かつ思考を生み出すことのできる計算装置でもある小型の装置を発明し、トゥルーテンプ君と名づける人が脳手術を受けたとする。この装置（tempucompと呼ぶ）は、トゥルーテンプ氏の頭に埋め込まれ、その先端はピンの頭ほどの大きさで、頭皮に気づかれることなく、温度に関する情報を脳の計算システムに伝達するセンサーとして機能する。そして、この装置が脳にメッセージを送り、外部センサーが記録した温度について考えるように仕向けるのである。テンプコンプは非常に信頼性が高いので、彼の思考は正しい温度の思考であると仮定する。つまり、これは信頼性の高い信念形成プロセスなのだ。さて、最後に、彼はテンパコンプが脳に挿入されたことを知らず、なぜ温度についてこんなに執拗に考えるのかについて少し困惑しているだけで、温度に関するこれらの考えが正しいかどうかを判断するために温度計をチェックすることはないと想像してください。しかし、その温度に関する考えが正しいかどうか、温度計で確認することはない。彼はそれを無反省に受け入れている。このように、彼は気温が104度であると考え、それを受け入れている。そうである。彼はそれを知っているのだろうか？
-
-https://faculty.fordham.edu/nballantyne/truetemp.html
-
-この例はTB,信頼性条件を満たしているのでMr. Truetempは気温を知っていることになる．が「彼が気温を知っている」と我々は見なせるのだろうか．
+では，彼は正しい温度を知っていたと言えるのだろうか？この例はTB,信頼性条件を満たしているので，この定義によれば，Mr.Truetempは気温を知っていることになる．しかし，我々の直観はMr.Truetempは気温を知っていると考えるだろうか？
 
 こうして知識概念の分析は最初は我々の概念的直観を明晰に言語化することを目標に進められたものの，徐々に我々の素朴で日常的な直観とは離れた定義を採用していくこととなる．これはそのように知識概念を捉えるほうが，他の学問との整合性がとれたり，第二の目標である「知性改善」に役立ったりするからである．
 
-# 概念工学へ
+## 概念工学へ
 
-一般に概念分析を我々が何を考えているかを明らかにすることだけに限定する必要はないし，概念の真の意味は我々が素朴に考えている通りのことだと考える必要もない．これについては行為論の責任概念でも述べた通り，我々のもつ概念には，進化的・歴史的な起源があり，そのときには正当性・適応性があっても，すでに有効でなくなっている場合があるからだ．概念分析においては，我々がもつ素朴概念をとりあえずの正解として，これを明晰に言語化することも一つの目標としていいが，その概念をより良いかたちに変えていくのも，目標とすべきことである．
+一般に概念分析を我々が何を考えているかを明らかにすることだけに限定する必要はないし，概念の真の意味は我々が素朴に考えている通りのことだと考える必要もない．これについては行為論の責任概念でも述べた通り，我々のもつ概念には，進化的・歴史的な起源があり，そのときには正当性・適応性があっても，すでに有効でなくなっている場合があるからだ<sidenote-number></sidenote-number><sidenote>もしくは，力，温度のように，日常的な直観と学問的な定義が異なる概念はたくさんある．</sidenote>．概念分析においては，我々がもつ素朴概念をとりあえずの正解として，これを明晰に言語化することも一つの目標だが，その概念をより良いかたちに変えていくことも目標とすべきことである．
 
-概念工学とは，概念を自動車や発電機や医薬品といったものと同じく人間社会が創りあげた人工物とみなし，工学が有益な人工物を設計するように，人類にとって重要な概念を創造・改定する営みである．(例えば人権という概念は我々が幸福に暮らすのにどれだけ大きな役割を果たしただろう？)そして，その視点で見ると，概念工学こそ哲学が今までやってきたことであり，今後も哲学がおこなう(べき)ことだといえる．
+概念工学とは，概念を自動車や発電機や医薬品といったものと同じく人間社会が創りあげた人工物とみなし，工学が有益な人工物を設計するように，人類にとって重要な概念を創造・改定する営みである．例えば人権という概念は我々が幸福に暮らすのにどれだけ大きな役割を果たしただろう？
 
-# 感想
+そして，この視点で見ると，概念工学こそ哲学が今までやってきたことであり，今後も哲学がおこなうこと，おこなうべきことだといえる．
 
-とは言っても，我々の言葉にできない曖昧な概念を直観に合う形で明晰な言葉で表現するという限りでの概念分析もとても面白い．具体例としては，「お前が言うな，非難の哲学」　https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/245550/1/cap_11_1.pdf
+## 感想
 
-は非難・偽善性についての概念分析で，テーマのセンスが良く，非常に明晰で具体例も豊富でわかりやすく，分析哲学の面白さがつまった論文である．ぜひ見てほしい．
+とは言っても，典型的な概念分析，つまり我々の言葉にできない曖昧な概念を直観に合う形で明晰な言葉で表現することは，とても面白い．具体例としては，<a href="https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/245550/1/cap_11_1.pdf" target="_blank" rel="noopener noreferrer">お前が言うな，非難の哲学</a>は非難・偽善性についての概念分析で，テーマのセンスが良く，非常に明晰で具体例も豊富でわかりやすく，分析哲学の面白さがつまった論文である．ぜひ見てほしい．
 
-また，概念を明晰にする活動を行わないまま，概念工学をすることはまま行われることであり，むしろそういう活動が概念を改変するメインの活動だったのではと感じられるのが『猫の大虐殺』である．
+また，概念を明晰にする活動を行わないまま，概念工学をすることはまま行われることであり，むしろそういう活動が概念を改変するメインの活動だったのではと感じられるのが『猫の大虐殺』である．これについては文章を書いたので[参照](/posts/猫の大虐殺)してほしい．
 
+
+[哲学入門3-哲学史 へ進む](/posts/philosophy/哲学入門3-哲学史)
+
+
+## 参考文献
+
+本
+
+- 概念工学宣言　
+- 心の哲学入門　
+- それは私がしたことなのか
+
+公開資料
+
+- [新しい行為論](https://www.jstage.jst.go.jp/article/jpssj/53/2/53_133/_pdf)
 
 
 
