--- a/src/posts/philosophy/正義論.md
+++ b/src/posts/philosophy/正義論.md
@@ -2,6 +2,8 @@
 layout: layouts/post.njk
 date : git Last Modified 
 title : 正義と善入門
+tags : phil
+order : 5
 ---
 <link rel="stylesheet" href="https://unpkg.com/treeflex/dist/css/treeflex.css">
 
@@ -162,11 +164,11 @@ title : 正義と善入門
 
 『共生の作法』は極めて論理的に書かれながら，そのウィットに富んだ表現や一見シニカルな，しかし熱い態度から，読むこと自体の喜び・楽しさを備えた一冊．
 
-極めて論理的であるがゆえの難しさがあるので，頭がしっかり働いた状態で読むべき．これを読んでからというもの，本を読むと，それが平凡なレベルであれば，論理や構成のずさんさにイヤに気づくようになり，文句が出るようになってしまった．
+極めて論理的であるがゆえの難しさがあるので，頭がしっかり働いた状態で読むべき．これを読んでからというもの，本を読むと，それが平凡なレベルであれば，論理や構成のずさんさにイヤに気づくようになり，文句が出るようになってしまった，と嘆く人が多い．
 
-論理的に・批判的に・第一原理から，考える・主張するとはどういうことか，を正義を実例にとことん実践している．ここでは，相対主義への議論を取り扱ったが，本書の議論が最も白熱するのはエゴイズムとの対話の部分だろう．
+論理的に・批判的に・第一原理から，考える・主張するとはどういうことか，を正義を実例にとことん実践している．ここでは，相対主義への議論を取り扱ったが，本書の議論が最も白熱し夢中になるのはエゴイズムとの対話の部分だろうと思う．
 
-必ず読むべき本．必ず読むべき本．必ず読むべき本．
+<stbl>必ず読むべき本．必ず読むべき本．必ず読むべき本．</stbl>
 
 ## 関連
 
