--- a/src/posts/philosophy/饗宴.md
+++ b/src/posts/philosophy/饗宴.md
@@ -1,20 +1,23 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+title : 饗宴
+tags : phil
+order : 6
 ---
+
+## 本文から幾つか抜き出し
 
 <span class="marginnote img-holder pb-10" >![饗宴 (光文社古典新訳文庫) | プラトン, 中澤 務 | 哲学・思想 | Kindleストア | Amazon](https://m.media-amazon.com/images/I/41rkJUezfbL.jpg){width=45% .shadow-lg }</span>
 
 
-饗宴(飲み会)に参加したものたちが一人ずつエロース<sidenote-number></sidenote-number><sidenote>恋心と性愛を司るギリシア神話の神</sidenote>賛美の演説していく．
-
-少年愛の重要な機能は教育にあったことが本文を読み進めるほど理解できる．
+饗宴(飲み会)に参加したものたちが一人ずつエロース<sidenote-number></sidenote-number><sidenote>恋心と性愛を司るギリシア神話の神</sidenote>賛美の演説していく．少年愛の重要な機能が教育にあったことが本文を読み進めるほど理解できる．
 
 *じっさい、まだ若い少年にとって、彼を愛してくれる優れた人よりもよいものがあるのかと問われても、ぼくには答えることができません。また、愛する人にとって、優れた少年よりもよいものがあるのかと問われても、ぼくには答えることができないのです．人が美しい人生を送りたいと願うとき、その者は生涯かけて導き手に従わねばなりません．しかし、血のつながりであれ、社会的評判であれ、財産であれ、それ以外のなんであれ、エロスほどうまく導き手を作り出せはしないのです．*
 
 少年愛をプラトニック・ラブ(と言っても，本文を読めば分かる通りプラトンは少年と性的な行為をしていただろうけど)，つまり肉体の関わり抜きのものとして再解釈・再構成するなら，現代においてもそれほどおかしな主張ではないと思う．
 
-イデアに到達するためには肉体の交わりが必要なのだという主張は，例えば以下の通りだが，あまり納得的なものではない．
+イデアに到達するためには肉体の交わりが必要なのだという主張は，例えば以下の通りだが，納得的なものではない．
 
 *この道を正しく進もうとする者は、次のようにしていかねばならぬ。まず、若いときに、美しい体に心を向かわせるところからはじめる。指導者が正しく導くなら、その者は、最初は一つの体を愛して、そこに美しい言葉を生み出す。ところが、その者はやがて次のように悟るのだ ─ 一つ一つの美しい体が持つ美しさは、みな兄弟のようにうり二つであり、いやしくも姿における美を追い求めようとするならば、あらゆる体における美しさは同一なのだと考えなければ筋が通らぬのだとな。ひとたびこのことに気づけば、その者は、すべての美しい体を愛する者となるであろう。そして、ひとつの体への執着から解放され、それを軽蔑してつまらぬこととみなすようになる。*
 
