--- a/src/posts/実践リーンスタートアップ.md
+++ b/src/posts/実践リーンスタートアップ.md
@@ -2,6 +2,8 @@
 layout: layouts/post.njk
 created : 2023-01-18 06:01:05
 date : git Last Modified 
+title : 実践リーンスタートアップ
+tags : other
 ---
 
 <span class="marginnote img-holder pb-10" >![Running Lean ―実践リーンスタートアップ (THE LEAN SERIES) | アッシュ・マウリャ, 渡辺 千賀, エリック・リース,  角 征典 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/71-xNKtcaWL.jpg){width=45% .shadow-lg }</span>
