--- a/src/posts/比較歴史制度分析.md
+++ b/src/posts/比較歴史制度分析.md
@@ -1,6 +1,8 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags : other
+title : 制度分析
 ---
 
 <span class="marginnote img-holder pb-10" >![比較歴史制度分析 上 (ちくま学芸文庫)](https://m.media-amazon.com/images/I/41hQlqiwVpL._SX353_BO1,204,203,200_.jpg){width=45% .shadow-lg }</span >
