--- a/src/posts/猫の大虐殺.md
+++ b/src/posts/猫の大虐殺.md
@@ -1,6 +1,8 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags : other
+title : 猫の大虐殺
 ---
 <link rel="stylesheet" href="https://unpkg.com/treeflex/dist/css/treeflex.css">
 
