--- a/src/posts/philosophy/哲学入門1-言語.md
+++ b/src/posts/philosophy/哲学入門1-言語.md
@@ -1,29 +1,35 @@
 ---
 layout: layouts/post.njk
 date : git Last Modified 
+tags : phil
+title : 哲学入門1 言語
+order : 2
 ---
 
 ## 哲学についての2つの誤解
 
-<div class="hidden">哲学の入門で，なぜ言語からはじめるのか？(開始するべきなのか？)哲学入門というと過去の偉大な哲学者が何を言ったのかをおさらいするものというイメージがあるかもしれない．</div>
 
-哲学が何をしているのかを考えれば，なぜ言語の問題が哲学で中心的な位置を占めるのか，なぜ言語から哲学の入門をスタートするのかが分かる．
+哲学が何をしているのかを考えれば
 
-それを説明する前に哲学について存在する誤解を解消しよう．
+- なぜ言語の問題が哲学で中心的な位置を占めるのか
+- なぜ言語から哲学の入門をスタートするのか
 
-哲学というと，例えばこういう文章を想像する．
-
-
-*精神は静止したものではなくなくて，むしろ絶対的に不安なもの・純粋な活動であり，あらゆる固定した悟性規定の否定または観念性である．精神は抽象的に単純ではなくて，自分の単純性のなかで同時に自分自身から自分を区別することである．*  ヘーゲル『精神哲学(上)』p11~12<marginnote>ヘーゲルの引用は[このサイト](https://core.ac.uk/download/pdf/148704269.pdf)より引用した</marginnote>
+が分かる．それを説明する前に哲学について存在する<span class="text-2xl font-bold">誤解を解消</span>しよう．哲学というと，例えばこういう文章を想像する．
 
 
-もちろんこれは切り抜きで，これだけ見てよくわからないと言うのは全く正当な主張でない．
+<div class="py-6">
 
-が，哲学を専門にするわけではない人が，こういう難しい文章に触れて抱いてしまう印象は次のようなものではないか．
+*精神は静止したものではなくなくて，むしろ絶対的に不安なもの・純粋な活動であり，あらゆる固定した悟性規定の否定または観念性である．精神は抽象的に単純ではなくて，自分の単純性のなかで同時に自分自身から自分を区別することである．*  ヘーゲル『精神哲学(上)』p11~12
 
-- 哲学は，高級で難解な，よくわからないはっきりしないことを述べるものだ．<sidenote-number></sidenote-number><sidenote>実際に先に引用したヘーゲルの文章がそうだと言っているわけではなく，専門にしない人が見るとそういう印象を受けるのではないか，それによって，本当に何事も述べてはいない，ただただよく分からない文章まで哲学的と考えてしまうのではないか，という主張．</sidenote>
-- 哲学は，何のためにもならないようなことを考えている．<sidenote-number></sidenote-number><sidenote>上の文を例に取れば，これだけ切り抜きで見てしまうと，精神について考えて何の意味があるの？と思うのは自然だろう．</sidenote>
+<marginnote>ヘーゲルの引用は[このサイト](https://core.ac.uk/download/pdf/148704269.pdf)より引用した</marginnote>
+</div>
 
+
+もちろんこれは切り抜きで，これだけ見てよく分からないと言うのは全く正当な主張でないけれども，哲学を専門にするわけではない人が，こういう難しい文章に触れて抱いてしまう印象は次のようなものではないか．
+
+- 哲学は，高級で難解な，よく分からない・はっきりしないことを述べるものだ．<sidenote-number></sidenote-number><sidenote>実際に先に引用したヘーゲルの文章がそうだと言っているわけではなく，専門にしない人が見るとそういう印象を受けるのではないか，それによって，本当に何事も述べてはいない，ただただよく分からない文章まで哲学的と考えてしまうのではないか，という主張．</sidenote>
+- 哲学は，何のためにもならないことを考えている．<sidenote-number></sidenote-number><sidenote>上の文を例に取れば，これだけ切り抜きで見てしまうと，精神について考えて何の意味があるの？と思うのは自然だろう．</sidenote>
+{.pt-6}
 
 
 ## 1点目についての反論
@@ -65,13 +71,13 @@ date : git Last Modified
 
 まず，哲学の対象は概念である．例えば「Xとはなにか？」と問うとき，Xは知識であったり，精神であったり，時間であったりするが，これらはすべて概念である．我々が考える時に扱うものは概念なので，哲学は思考についての思考ともいえる．<div class="hidden">「これが知識です」と指させるものがこの世界のどこかに存在するわけではないので，この問いに対して「これがXです」と指差しで回答することはできない．そこで言葉を用いて答えることになる．<marginnote>もちろん指差しで答えられるものであっても，その特殊な1例に過ぎないので概念の答えにはならない．例えば「犬とはなにか？」と問うて，目の前の柴犬を指して「これが犬です」というのは，犬の1つを指したのであって，犬とはなにかの回答にはならないと言えるだろう．よって，概念の答えは指差しでは回答できないのだ．</marginnote></div>
 
-概念について考えるという点では，近代の哲学も現代の哲学も変わらない．変わったのは概念を明晰にするために，つまり，「Xとはなにか？」のような問いに答えるために用いる方法である．先走って言うと，概念と言語の関係が近代と現代で大きく変わったのだ．
+概念について考えるという点では，近代の哲学も現代の哲学も変わらない．変わったのは概念を明晰にするために，つまり，「Xとはなにか？」のような問いに答えるために用いる方法である．先走って言うと，<b class="text-2xl">概念と言語の関係が近代と現代で大きく変わった</b>のだ．
 
 デカルトなどの近代の哲学者にとっては，概念を明瞭化するために行うべきことは，心の内省によって見いだされる観念を明晰化することだった．思考とは自分の心のなかに生じ，自分だけが内省できるものだった．観念を他人に伝えるためには言語を使うしかないが，それでも言語は伝えるための手段に過ぎないので，たとえ観念をうまく言語化できなくても，観念が自分のなかで一度明晰に把握されれば，観念を所有している者にとっては誤る余地がないことになる．
 
 このように「概念の意味とは心の中にいだくイメージ(像)だ」という考えは「意味の心像説」と呼ばれ，直接言及はされなくとも，近代哲学の基本的な考え方であった．これに対する決定的な批判はウィトゲンシュタインによってなされた．これについては[このページ](https://mickindex.sakura.ne.jp/wittgenstein/witt_other_mental.html)を参照してほしい． <marginnote>観念と心像は厳密には違うものだが，それを正確に論じることは難しく，ここでの話の大筋を変えないので，話が不正確になるのを恐れず先に進むことにする．</marginnote>
 
-こうして「<stbl>思考=概念とは，各人のプライベートな心のなかに見いだされるものではなく，概念の分析は，その言語的表現を解明することによってのみ可能になる</stbl>」という言語論的転回<sidenote-number></sidenote-number><sidenote>これについては[このサイト](http://tanemura.la.coocan.jp/re3_index/2K/ke_linguistic_turn.html)に言語論的転回とは何かを示すいくつかの引用が載せられている．そのうち，野家のものは分かりやすいので，サイトが消える前に，こちらにも載せておこう．<br><br> *デカルトに始まる近代哲学は、自我（自己意識）の存在の確実性から出発し、意識分析（反省）の方法によって、認識や存在の問題を解明しようと努めてきた。しかし、この内省的方法は意識の私秘性（privacy）という壁に阻まれ、外界存在の証明や他我認識（他人の心）の問題を解決することができず、独我論や不可知論の袋小路に陥らざるをえなかった。それに対して、フレーゲ、ラッセル、ウィトゲンシュタインらの哲学者は、哲学的議論の土俵を私秘的な意識から公共的な言語へと転換することによって、こうした困難に立ち向かうことを試みた。すなわち、哲学的命題を表現する言語を分析することによって、問題を解明ないしは消去することを目指したのである* 野家［2008：79］</sidenote>により，言語の分析が哲学の中心問題となる．自分が考えたり，他人が考えていることを明晰にするためには，言語を分析するしかなく，哲学とは明晰に考えること，思考について思考することなのだから，言語の問題から哲学に入門するのが妥当だろう．
+こうして「<stbl>思考=概念とは，各人のプライベートな心のなかに見いだされるものではない．概念の分析は，その言語的表現を解明することによってのみ可能になる</stbl>」という言語論的転回<sidenote-number></sidenote-number><sidenote>これについては[このサイト](http://tanemura.la.coocan.jp/re3_index/2K/ke_linguistic_turn.html)に言語論的転回とは何かを示すいくつかの引用が載せられている．そのうち，野家のものは分かりやすいので，サイトが消える前に，こちらにも載せておこう．<br><br> *デカルトに始まる近代哲学は、自我（自己意識）の存在の確実性から出発し、意識分析（反省）の方法によって、認識や存在の問題を解明しようと努めてきた。しかし、この内省的方法は意識の私秘性（privacy）という壁に阻まれ、外界存在の証明や他我認識（他人の心）の問題を解決することができず、独我論や不可知論の袋小路に陥らざるをえなかった。それに対して、フレーゲ、ラッセル、ウィトゲンシュタインらの哲学者は、哲学的議論の土俵を私秘的な意識から公共的な言語へと転換することによって、こうした困難に立ち向かうことを試みた。すなわち、哲学的命題を表現する言語を分析することによって、問題を解明ないしは消去することを目指したのである* 野家［2008：79］</sidenote>により，言語の分析が哲学の中心問題となる．自分が考えたり，他人が考えていることを明晰にするためには，言語を分析するしかなく，哲学とは明晰に考えること，思考について思考することなのだから，言語の問題から哲学に入門するのが妥当だろう．
 
 ## 言語はいかに混乱して使われるか
 
@@ -116,10 +122,13 @@ date : git Last Modified
 - 彼には投票権がある．
 - プロ野球開幕まで1週間がある．
 
-このとき「投票権はどこにあるのか？」と問うのはナンセンスなのは説明できるだろうか？「ある」には確かに「事物が存在する」という意味があって，1番目の文ではその意味で使われているが，「彼には投票権がある」というときに，これが意味しているのは「彼は選挙で投票できる」ということだ．投票できるときに，権利があるといい，投票できないときに，権利がないという．権利のあるなしは行為の実行可能性について言及しているだけで，何らかの事物を指しているわけではない．
+このとき「投票権はどこにあるのか？」と問うのはナンセンスなのは説明できるだろうか？「ある」には確かに「事物が存在する」という意味があって，1番目の文ではその意味で使われているが，「彼には投票権がある」というときに，これが意味しているのは「彼は選挙で投票できる」ということだ．投票できるときに，権利があるといい，投票できないときに，権利がないという．権利のあるなしは行為の実行可能性について言及しているだけで，何らかの事物の存在を指しているわけではない．
 
-同様に，3番目の問いに触発された「1週間はどこにあるのか？」もナンセンスである．「プロ野球開幕まで1週間がある」というときに意味しているのは，「プロ野球開幕までにアナログ時計の長針が14回転する」ということ，もしくはもっと厳密に考えたければ「プロ野球開幕までにセシウム133原子が91億9263万1770 * 60 * 60 * 24 * 7回電磁波を出す」ということである．つまり，時間があるというとき意味しているのは，ある量の運動を行えるということであって，それに対応するものを1時間とか1週間のような名前で呼んでいるに過ぎない． <marginnote>実際，時が止まったというときに我々がイメージするのは，すべての物体の運動が止まった様子であり，ここからも時間は常に運動によって測られていることがわかる</marginnote>だから，これも何らかの存在を示しているわけではなく，我々の生活に必要な便利な省略語を概念として導入 <sidenote-number></sidenote-number><sidenote>実際「テストはこれから地球が地軸を中心に45度回転したら終了します(テストはこれから3時間行われます)」のような使い方は誰もしたくないだろう．</sidenote> し，その事態の成立を「ある」とか「ない」とかいう言葉を使って表しているということだ <sidenote-number></sidenote-number><sidenote>「夢中で時間を忘れた」というときの「時間」は運動に対応したものではない，と思うかもしれないが，この場合の「時間」は「1週間」のようなこの段落で議論した「時間」と別のものと考えるのが良いだろう．実際，例えば人間の体感する熱い・冷たいは，温度のみで決まるものではない(同じ気温の場所で放置されたものは同じ温度だが，例えば鉄棒は木よりもひんやり冷たく感じる)．同様に人間が感じる「時間」も，ここで議論した「時間」のみで決まるわけではなく，2つは関連していて同じ語で表されるが，別物なのだ．
-</sidenote> ．
+同様に，3番目の問いに触発された「1週間はどこにあるのか？」もナンセンスである．「プロ野球開幕まで1週間がある」というときに意味しているのは，「プロ野球開幕までにアナログ時計の長針が14回転する」ということ，もしくはもっと厳密に考えたければ「プロ野球開幕までにセシウム133原子が91億9263万1770 * 60 * 60 * 24 * 7回電磁波を出す」ということである．つまり，時間があるというとき意味しているのは，ある量の運動を行えるということであって，それに対応するものを1時間とか1週間のような名前で呼んでいるに過ぎない． 実際，時が止まったというときに我々がイメージするのは，すべての物体の運動が止まった様子であり，ここからも時間は常に運動によって測られていることがわかる．
+
+だから，「時間がある」も何らかの存在を示しているわけではなく，我々の生活に必要な便利な省略語を概念として導入し，その事態の成立を「ある」とか「ない」とかいう言葉を使って表しているということだ．実際「テストはこれから地球が地軸を中心に45度回転したら終了します(テストはこれから3時間行われます)」のような使い方は誰もしたくないだろう．
+
+一方，例えば「夢中で時間を忘れた」というときの「時間」は運動に対応したものではない，と思うかもしれないが，この場合の「時間」は「1週間時間がある」というときの時間とは議別のものと考えるのが良いだろう．例えば人間の体感する熱い・冷たいは，温度のみで決まるものではない．同じ気温の場所で放置されたものは同じ温度だが，例えば鉄棒は木よりもひんやり冷たく感じる．同様に人間が感じる「時間」も，ここで議論した「時間」のみで決まるわけではなく，2つは関連していて同じ語で表されるが，別物なのだ．
 
 
 ## 言語 哲学の意義
@@ -128,13 +137,8 @@ date : git Last Modified
 
 哲学におけて，言語を分析することの意義が分かったと思う．一見，問題を提出しているように見えて，何事かを語っているように見えて，文を分析してみると，そうではないことが分かる場合を実例を通して実感してもらえれば嬉しい．哲学は偉大な人が取り組んでも，問題の抽象性から言語的誤解や混乱がおきやすいが，その危険を抱えているのは哲学者だけではなく，我々も同じである．考えることとは言語を使用することである以上，言葉をうまく使えていないために，思考が明晰にならない，何かを考えているようで何も考えていない，ナンセンスに陷ってしまう，という可能性が常にある．そうならないための方法論や実践練習を現代の哲学は非哲学者にも提供してくれていると思う．これこそ，哲学を誰もが学ぶべき理由だろう．
 
+[哲学入門2-認識行為論 へ進む](/posts/philosophy/哲学入門2-認識行為)
 
-## おまけ 道具主義
-
-
-ほかの代表的な例として操作的に定義される構成概念を実在物とみなしてしまう，ということを紹介しよう．
-
-漢方　道具主義
 
 
 <div class="hidden">
