読めるように

--- a/src/guide/statistics/12.md
+++ b/src/guide/statistics/12.md
@@ -1,5 +1,9 @@
 ---
 layout: layouts/guide.njk
+title: スタチンの論文を実際に読む
+order : 12
+next : /guide/statistics/13
+previous : /guide/statistics/11
 ---
 
 ここでは実際にスタチンという薬剤の効果を調べた研究論文を読んでみます．原著論文は[ここ](https://www.nejm.org/doi/full/10.1056/nejm199511163332001)で公開されていますが，日本語に[翻訳したもの](/guide/statistics/statin_raw)もあります．これらを読みながら，現実世界では薬の効果をどう調べているのかを批判的に見ていきましょう．
