--- a/src/guide/statistics/14.md
+++ b/src/guide/statistics/14.md
@@ -1,9 +1,11 @@
 ---
-layout: layouts/post.njk
+layout: layouts/guide.njk
+title: ベイズ・様々な確率分布・因果
+order : 13
+next : /guide/statistics/13
+previous : /guide/statistics/11
 ---
 
-スタチンの論文を読んでみる
-https://www.nejm.org/doi/full/10.1056/nejm199511163332001
 
 
 ３つの道について，
