--- a/src/posts/いくつかの詩.md
+++ b/src/posts/いくつかの詩.md
@@ -5,9 +5,6 @@ title : いくつかの詩
 tags : other
 ---
 
-
-
-
 ## 宿題　
 
 目をつぶっていると
@@ -64,6 +61,72 @@ tags : other
 足元に落ちて高雅な陶器のように砕けないようにと
 
 黒田三郎(詩集「失われた墓碑銘」から)
+
+## 小さなマリ
+
+(1は省略)
+
+２．夢
+おまえは小さな手で
+ぼくのものでない夢を
+たえずぼくの心のなかに組みたてる
+これはお山　これは川
+それから指で大きな輪をえがいて
+ここには海があるの
+これはお家　これはお庭　これは樹
+ここには犬がつないであるの
+そうしておまえは自分のまわりに
+ひとつずつ自然を呼びよせて
+ぼくと一緒に住もうというのだ
+あどけないマリの夢よ
+おまえの世界には
+沈黙に聴きいる石もなければ
+歌わぬ梢
+物言わぬ空というものがない
+これはお茶碗　これはお皿
+大きいフライパンをあやつる小さいマリは
+ぼくと一緒に暮らそうという
+
+
+３．歌
+小さいマリよ
+どんなに悲しいことがあっても
+ぼくたちの物語を
+はじめからやり直し
+なんべんもなんべんもやり直して
+気むずかしい人たちに聞かせてあげよう
+小さいマリよ
+さあキスしよう
+おまえを高く抱きあげて
+どんな恋人たちよりも甘いキスをしよう
+まあお髭がいたいわと
+おまえが言い
+そんならもっと痛くしてやろうと
+ぼくが言って
+ふたりの運命を
+始めからやり直せばいいのだよ
+
+さあゆこう
+小さいマリよ
+おまえと歩むこの道は
+とおくまで草木や花のやさしい言葉で
+ぼくたちに語りかけてくるよ
+どんなに暗い日がやってきても
+太陽の涙から生まれてきたぼくたちの
+どこまでもつづく愛の歌で
+この道を歩いてゆこう
+小さいマリよ
+さあ歌ってゆこう
+よく舌のまわらぬおまえの節廻しにあわせて
+大きな声でうたうぼくたちの歌に
+みんなじっと耳をすましているのだから
+ずっと空に近い野原の
+高い梢で一緒に歌っている人たちが
+心から喜んでくれるから
+さあ歌ってゆこう
+小さいマリよ
+
+鮎川　信夫(『続・鮎川 信夫詩集』から)
 
 
 ## The Tuft of Flowers
@@ -201,6 +264,8 @@ With one whose thought I had not hoped to reach.
 
 「人は一緒に働くのだ」、 私は心底から彼に言った、
 「一緒に働こうと、別々にだろうと」。
+
+(ロバート・フロスト『対訳フロスト詩集―アメリカ詩人選』から)
 
 </div>
 
