--- a/src/このサイトについて.md
+++ b/src/このサイトについて.md
@@ -2,28 +2,10 @@
 layout: layouts/post.njk
 ---
 
-このサイトは世界のさまざまな事柄へのイントロダクションです．
-I.世界原理，II.読書リスト，III.考えたことの3つから構成されています．
-
-## II.読書リスト
-
-各記事のタイトルに載っている本を代表として，その内容を補足しながらまとめ，その分野の基本的な考え方・原理を理解することを目的に書かれています．紹介しているどの本も，非常によく書かれていて<span class="sidenote-number"></span><span class="sidenote">よく書かれた本とはなにかは[読書について]()を参照</span>万人にとって読む価値のある本です．記事ごとの直接的なつながりはないので単発で読めますが，ばらばらの本の寄せ集めにならないように，相互のつながりやその共通の思想を感じられるように書きました．どの出版社からのものがおすすめか分かりやすいように本の画像を載せていますが，リンクは貼っていないので，ご自身で探してください．
-
-
-## I.世界原理
-
-世界を第一原理から理解することを目的に，領域を超えて1つの大きなストーリーを構成する予定です．具体的には論理学からはじまり，現代文明を支える基本的な仕組みをハード・ソフト両面から理解することを目標にしています．これはまだ書かれていません．
-
-## III.考えたこと
-
-I,IIをふまえて実際的な問題について僕が考えたことを載せています．
-
-
-
-
 ## Link
 
-- [github]()
-- [twitter]()
+- [github](https://github.com/aliens3/aliensGuide)
+- [twitter](https://twitter.com/aliens_guide)
 
-サイトのソースコードはgithubで公開されています．誤り・修正を教えていただけるときにはissueをたてるか，pull requestを送ってください．その他の連絡はtwitterのDMまで．
+このサイトのソースコードはgithubで公開されています．誤り・修正を教えていただけるときにはissueをたてるか，pull requestを送ってください．その他の連絡はtwitterのDMまで．
+
